# data-analytics-project

./: .gitignore  Histogramme.ipynb  Line-Charts.ipynb  Mindestanforderungen 2.md  Mindestanforderungen1.ipynb  Mindestanforderungen2-Denny.ipynb  Mindestanforderungen2.ipynb  Mindestanforderungen2_Jonas.ipynb  Mindestanforderungen3-Denny.ipynb  Mindestanforderungen3.ipynb  README.md  pyproject.toml
data-understanding-uebungen/: 10-numpy.ipynb  15-pandas-intro.ipynb  20-daten-exploration.ipynb  30-daten-transformation.ipynb  40-feature-engineering.ipynb  50-time-series.ipynb  90-abschluss.ipynb
data-understanding-uebungen/data/: cities.csv  cities_non_zero.csv  city_system_lengths.csv  lines.csv  section_lines.csv  stations.csv
project/: 00-project-start.ipynb  Mindestanforderungen2_Moritz.ipynb  Mindestanforderungen3_Moritz.ipynb  survey-test.CSV
